<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Whatsup</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Conversations</string>
    <string name="mon_profils">mon profils</string>
    <string name="erreur_pas_reseau">Pas de réseau</string>
    <string name="unknow_error">Erreur inconue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_name">nom utilisateur</string>
    <string name="my_bio">votre status</string>
    <string name="name_auth">name</string>
    <string name="text_in_translating">Traduction en cours</string>
    <string name="transleted_missing">Traduction échouée</string>
    <string name="text_translated_text_to_english">Translate</string>
    <string name="text_image_check">select image checket</string>
    <string name="text_creation_groupe">Création d\'un groupe</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">377546826197936</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">
        fb377546826197936
    </string>
    <string name="groupes">Groupes</string>
    <string name="empty_message">ici le texte du message</string>
    <string name="langues_dorigines">Langues dorigines</string>
    <string name="mon_compte">Mon compte</string>
    <string name="messqge_cliquer_photo_profifs">Cliquez dessus pour modifier l\'image</string>
    <string name="traduiction_angllaise">traduire en anglais</string>
    <string name="traduire_en_fran_ais">traduire en français</string>
</resources>
