<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/id_menu_translete_all_input_en"
            android:title="@string/traduiction_angllaise"
            android:enabled="true"
            android:visible="true"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_translate_en"/>

    <item
            android:id="@+id/id_menu_translete_all_input_fr"
            android:title="@string/traduire_en_fran_ais"
            android:enabled="true"
            android:visible="true"
            app:showAsAction="ifRoom"
            android:icon="@drawable/icons_french"/>
    <item
            android:id="@+id/id_menu_text_originale"
            android:title="@string/langues_dorigines"
            android:enabled="true"
            android:visible="true"
            app:showAsAction="ifRoom"
            android:icon="@drawable/icon_default_language"/>
</menu>