<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/id_vue_creer_groupe"
        tools:context=".authentifiaction.UserProfil">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                app:cardElevation="6dp">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/mon_compte"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/titre_page"
                        android:textColor="@color/colorPrimary"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#8000"
                        android:layout_marginTop="13dp"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="15dp"
                              android:paddingTop="13dp"
                              android:paddingRight="15dp"
                >

                    <!--    <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/id_imageGroupe"
                                android:src="@drawable/icon_groupe_image"/>-->
                    <com.facebook.drawee.view.SimpleDraweeView
                            xmlns:fresco="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/imageView_profile_picture"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            fresco:roundAsCircle="true"
                            fresco:roundingBorderColor="@android:color/darker_gray"
                            fresco:roundingBorderWidth="2dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            app:srcCompat="@drawable/ic_account_box_black_24dp"
                            tools:ignore="VectorDrawableCompat"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/messqge_cliquer_photo_profifs"
                    />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_montant"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/my_name"
                            android:inputType="text"
                            android:id="@+id/editText_name"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_destinataire"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/my_bio"
                            android:textColor="@color/colorPrimary"
                            android:inputType="text"
                            android:id="@+id/editText_bio"
                            android:maxLines="1"
                            android:ellipsize="end"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="15dp"
                              android:paddingTop="13dp"
                              android:paddingRight="15dp"
                >
                    <Button
                            android:id="@+id/btn_save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorAccent"
                            android:text="Mise à jours du profils"/>

                    <Button
                            android:id="@+id/btn_sign_out"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:backgroundTint="?attr/colorPrimaryDark"
                            android:text="Se déconneccter"/>
                    <Button
                            android:id="@+id/btn_sign_dele_caount"
                            android:layout_width="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#ee1010"
                            android:text="Supprimer mon compte "
                    />


                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>